--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1>Simulador de Fútbol 7</h1>
     <div id="canvas-container"></div>
   </main>
+  <img src="https://cdn.pixabay.com/photo/2016/10/18/18/35/dementia-1750965_1280.jpg">
   <script src="sketch.js"></script>
 </body>
 </html>
